Added dummy server response (auth request) Implemented different req types facilitation

--- a/WEBSERVER/server/Makefile
+++ b/WEBSERVER/server/Makefile
@@ -1,7 +1,7 @@
 SRC= $(wildcard *.cpp)
 OBJ= $(SRC:.cpp=.o)
 EXE= main
-BASEPATH=../../OSApiStudent
+BASEPATH=../../inc/OSApiStudent
 LIBPATH=$(BASEPATH)/lib/host/release
 CXXFLAGS=-DOS_LINUX -I$(BASEPATH)/inc
 LNKFLAGS=-L$(LIBPATH) -lOSApi -lrt -lpthread
@@ -9,7 +9,7 @@ LNKFLAGS=-L$(LIBPATH) -lOSApi -lrt -lpthread
 
 
 $(OBJ):$(SRC)
-	$(CXX) $(CXXFLAGS) -c $@ $^
+	$(CXX) $(CXXFLAGS) -c $^
 
 main:$(OBJ)
 	$(CXX) -o main $(OBJ) -L$(LIBPATH) -lOSApi -lrt -lpthread
