Added POST /req_treat/:dev_id endpoint Added GET /check/:dev_id endpoint

--- a/WEBSERVER/serverWorkspace/sourceWebAPI/ServerSrc/Makefile
+++ b/WEBSERVER/serverWorkspace/sourceWebAPI/ServerSrc/Makefile
@@ -2,7 +2,7 @@
 
 ARCH?=x86-64
 
-BINNAME=WeatherStation
+BINNAME=FoodgiverServer
 CXXFLAGS=-std=c++17 -DRESTINIO_USE_BOOST_ASIO=shared
 LDDFLAGS=
 
