--- a/RPI/.vscode/settings.json
+++ b/RPI/.vscode/settings.json
@@ -56,6 +56,8 @@
         "thread": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp",
-        "semaphore": "cpp"
-    }
+        "semaphore": "cpp",
+        "map": "cpp"
+    },
+    "C_Cpp.errorSquiggles": "Enabled"
 }
