--- a/RPI/.vscode/settings.json
+++ b/RPI/.vscode/settings.json
@@ -57,7 +57,8 @@
         "cinttypes": "cpp",
         "typeinfo": "cpp",
         "semaphore": "cpp",
-        "map": "cpp"
+        "map": "cpp",
+        "bitset": "cpp"
     },
     "C_Cpp.errorSquiggles": "Enabled"
 }
